FIND_PACKAGE(LibEV REQUIRED)
FIND_PACKAGE (Threads REQUIRED)

INCLUDE_DIRECTORIES (${PROCTOR_SOURCE_DIR}/src)
INCLUDE_DIRECTORIES (${PROCTOR_SOURCE_DIR}/src/io)
INCLUDE_DIRECTORIES (${PROCTOR_SOURCE_DIR}/src/log)
INCLUDE_DIRECTORIES (${PROCTOR_SOURCE_DIR}/src/messagequeue)

ADD_SUBDIRECTORY (io)
ADD_SUBDIRECTORY (protocol)

LINK_LIBRARIES (pthread)
LINK_LIBRARIES (ev)



# LINK_DIRECTORIES (${PROCTOR_BINARY_DIR}/src/io) 

ADD_EXECUTABLE (proctor Main.cpp)


TARGET_LINK_LIBRARIES (proctor io ev protocol ${CMAKE_THREAD_LIBS_INIT} ${CMAKE_DL_LIBS})

IF(ENABLE_GPERF_TOOLS MATCHES "ON")
    TARGET_LINK_LIBRARIES(proctor profiler)
    TARGET_LINK_LIBRARIES(proctor tcmalloc)
ENDIF(ENABLE_GPERF_TOOLS MATCHES "ON")

